# template

./: CONTRIBUTORS.txt  LICENSE  README.rst  package.json  pyproject.toml  render.yaml  setup.cfg
blog/contrib/sites/migrations/: 0001_initial.py
blog/frontend/: apps.py  package.json  tailwind.config.js  urls.py  views.py  webpack.config.js
blog/frontend/src/: input.css
blog/frontend/src/components/blog/components/: Button.js  (+4 more)
blog/frontend/static/css/: project.css
blog/frontend/static/frontend/blog/: home.js  home.js.LICENSE.txt
blog/frontend/static/sass/: project.scss
blog/frontend/templates/: 403.html  404.html  500.html
blog/frontend/templates/account/: base.html  email_confirm.html  login.html
blog/frontend/templates/base/: blog.html
blog/frontend/templates/frontend/: index.html
blog/frontend/templates/pages/blog/: home.html
blog/frontend/templates/users/: user_form.html
blog/users/: admin.py  models.py
blog/users/migrations/: 0001_initial.py
blog/users/tests/: test_forms.py  test_tasks.py  test_views.py
config/: celery_app.py  hosts.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst
requirements/: base.txt  local.txt  production.txt
staticfiles/css/: project.css
staticfiles/frontend/blog/: angermanagement.js  article.js  article.js.LICENSE.txt  home.js  home.js.LICENSE.txt  impactmatrix.js  impactmatrix.js.LICENSE.txt
staticfiles/frontend/toxicdatingapp/: home.js  login.js  matching.js  profile.js  registration.js  registration.js.LICENSE.txt  signup.js.LICENSE.txt
(+4 files in other folders)
